--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
 beautifulsoup4==4.12.3
-nltk==3.8.2
+nltk==3.8.1
 openai==1.41.1
 rank_bm25==0.2.2
-torch==2.4.0+cu124
+torch==2.4.0
 tqdm==4.66.5
 transformers==4.44.0
+httpx==0.27.2
+pytest>=7.0.0
+pytest-cov>=4.0.0
